# daily-logger

./: Cargo.toml  LICENSE  README.md
logger_test_app/: Cargo.toml  package-lock.json
logger_test_app/src/: main.rs
src/: lib.rs  logger.rs
