[package]
name = "daily-logger"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/xukangmin/daily-logger"
description = "A Rust logging library that provides daily file rotation and colored console output with support for order-specific logging."

[dependencies]
chrono = "0.4.41"
dashmap = "6.1.0"
log = { version = "0.4.27", features = ["kv"] }
once_cell = "1.21.3"